# sinatra-be

./: .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  http-client.env.json  models.md  requests.http  rustfmt.toml
backend/: .editorconfig  Cargo.toml
backend/src/: db.rs  main.rs  tracks.rs
deployments/: mongo-configmap.yaml  mongo-express.yaml  mongo-secrets.yaml  mongo.yaml
image_api/: Cargo.toml
image_api/src/: lib.rs  main.rs
review_service/: Cargo.toml
review_service/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: image.rs  track.rs
site_api/: Cargo.toml
site_api/src/: main.rs
src/: main.rs
src/models/: collections.rs  mod.rs  playlist.rs  tracks.rs
src/routes/: mod.rs
tf/: main.tf  terraform.tfstate  terraform.tfvars  variables.tf
