[package]
name = "sinatra-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0.130", features = ["derive"] }
tower = "0.4.13"
hyper = { version = "0.14.9", features = ["full"] }
