[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
image_api = { path = "../image_api" }
axum = "0.6.19"
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.7.0-beta.1",features = ["default"] }

