[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
image_api = { path = "../image_api" }
axum = "0.6.20"
tokio = { version = "1", features = ["full", "macros"] }
mongodb = { version = "2.7.1",features = ["default"] }
tower-http = { version = "0", features = ["cors", "trace"] }
dotenv = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"]}

