[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_api = { path = "../image_api" }
axum = "0"
tokio = { version = "1", features = ["full", "macros"] }
mongodb = { version = "2", features = ["default"] }
tower-http = { version = "0", features = ["cors", "trace"] }
dotenv = { version = "0" }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
